--- a/app/src/main/res/layout/activity_mcqactivity.xml
+++ b/app/src/main/res/layout/activity_mcqactivity.xml
@@ -1,6 +1,10 @@
 <!-- multiple_choice_question.xml -->
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -84,5 +88,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/submit" />
-
 </LinearLayout>
+</ScrollView>
