Create Multiple Choice Question

--- a/app/src/main/res/layout/activity_mcqactivity.xml
+++ b/app/src/main/res/layout/activity_mcqactivity.xml
@@ -88,5 +88,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/submit" />
+
+    <ImageView
+        android:id="@+id/imgValidation"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="center"
+        android:contentDescription="@string/imgValidation"
+        />
+
+
 </LinearLayout>
 </ScrollView>
